force-app/main/default/objects/Rating__c/fields/Rating_Out_of_5__c.field-meta.xml
<CustomField>
    <fullName>Rating_Out_of_5__c</fullName>
    <description>Enter 1 to 5</description>
    <inlineHelpText>Enter 1 to 5</inlineHelpText>
    <label>Rating Out of 5</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>