force-app/main/default/objects/Rating__c/fields/Ratings_Given_to_which_Student__c.field-meta.xml
<CustomField>
    <fullName>Ratings_Given_to_which_Student__c</fullName>
    <description>Ratings Given to which Student</description>
    <inlineHelpText>Ratings Given to which Student</inlineHelpText>
    <label>Ratings Given to which Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Ratings</relationshipLabel>
    <relationshipName>Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>