force-app/main/default/objects/Rating__c/fields/Student_Contact__c.field-meta.xml
<CustomField>
    <fullName>Student_Contact__c</fullName>
    <formula>Ratings_Given_to_which_Student__r.Student_Contact_Number__c</formula>
    <label>Student Contact</label>
    <type>Text</type>
</CustomField>